add announce_wss_port, landing page and enhanced README

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,2 @@
 [nymnodes]
-node1 ansible_host=94.247.42.74 ansible_user=root hostname=ch-node1.spectredao.net location=CH email=email@spectredao.net
-# node2 ansible_host=node2.example.com hostname=node2.example.com location=Germany email=admin@example.com
+node1 ansible_host=YOUR_SERVER_IP ansible_user=root hostname=your.hostname.com location=YourLocation email=your.email@example.com
