--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,5 +1,5 @@
 ---
-nym_version: "v2024.12.1-aero"
+nym_version: "v2024.13-magura-patched"
 binary_url: "https://github.com/nymtech/nym/releases/download/nym-binaries-{{ nym_version }}/nym-node"
 cli_url: "https://github.com/nymtech/nym/releases/download/nym-binaries-{{ nym_version }}/nym-cli"
 dao_name: "Spectre DAO"
